--- a/css/style.css
+++ b/css/style.css
@@ -1609,21 +1609,28 @@ details p {
 
 /* Tooltip "Más información" */
 
-.country-card:hover::after {
-    content: "Más información";
+.tooltip {
+    display: none; /* Por defecto, el tooltip está oculto */
     position: absolute;
-    top: 50%; /* Coloca el tooltip en el centro vertical */
-    left: 50%; /* Coloca el tooltip en el centro horizontal */
-    transform: translate(-50%, -50%); /* Ajusta para centrar completamente */
+    top: 50%;
+    left: 50%;
+    margin-right: 0.25rem;
     background: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 5px 10px;
-    margin-right: 3px;
     font-size: 12px;
     border-radius: 5px;
     opacity: 0;
-    animation: fadeIn 0.3s forwards;
+    pointer-events: none; /* Para evitar que el tooltip interfiera con la interacción del mouse */
+    transition: opacity 0.3s ease; /* Suavizar la aparición */
 }
+
+/* Mostrar el tooltip cuando el cursor pase por encima */
+.country-card:hover .tooltip {
+    display: block; /* Mostrar el tooltip */
+    opacity: 1000; /* Hacerlo completamente visible */
+}
+
 
 /* Estilos del popup */
 .map-popup {
