Modularizacion y refactorizacion del codigo js.

--- a/css/style.css
+++ b/css/style.css
@@ -2057,3 +2057,5 @@ details p {
 }
 
 /* FIN DEL APARTADO DE FORMACIÓN */
+
+/* © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción o imitación total o parcial del código sin autorización. */
